--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
   z-index: 100;
 }
 
-.manu li{
+.menu li{
   width: 150px;
   padding: 10px 0px;
 
@@ -28,7 +28,7 @@
   display: inline-block;
 }
 
-.manu{
+.menu{
   float: right;
   padding: 10px;
 }
@@ -55,7 +55,6 @@ li:hover a{
   position: relative;
   top: 96px;
   width:auto;
-
 }
 
 .container{
@@ -66,7 +65,6 @@ li:hover a{
 
 #about, #my-work, #contact-me{
   border: 1px ;
-
 }
 
 #content > .container > div{
@@ -176,4 +174,87 @@ h1{
 #about h1{
   text-align: left;
   margin-bottom: 0;
+}
+
+@media screen and (min-width: 1024px) {
+  .menu-button,
+  .menu-button-checkbox {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .container {
+    width: auto;
+  }
+  #my-avatar {
+    width: 100%;
+  }
+
+  #my-avatar img {
+    display: block;
+    margin: 15px auto;
+  }
+
+  .menu-button {
+    float: right;
+    font-size: 25px;
+    line-height: 40px;
+    color: black;
+    background: transparent;
+    padding: 0 15px;
+    border: 0;
+
+  }
+
+  .menu-button-checkbox {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 55px;
+    height: 40px;
+    opacity: 0;
+  }
+
+  .menu-button-checkbox:checked ~ .menu {
+    display: block;
+  }
+
+  .menu {
+    display: none;
+    margin-top: 0;
+    padding-left: 0;
+    position: fixed;
+    top: 30px;
+    float: right;
+  }
+
+  .menu li {
+    border: 0;
+    border-radius: 0;
+    max-width: 30%;
+
+  }
+
+
+  .item {
+    max-width: 100%;
+  }
+
+  form.contact-form {
+    width: 80%;
+  }
+
+  a{
+    display: block;
+    color: black;
+    text-decoration: none;
+  }
+
+  li:hover{
+    border: 1px solid #ff6600;
+    background-color: transparent;
+    border-radius: 50px;
+  }
+
 }
